*** 19991009_3 by lusky
updated RELNOTES to indicate that AIX is unsupported


*** 19991009_2 by lusky
revved patchlevel to b108
fixed -DNDEBUG in Makefile.in (th)
fix for resolver blocking on Linux 2.0 /libc5 (th)
workaround for broken poll() in Linux 2.0 / libc5 (th)


*** 19991009_1 by lusky
added -DNDEBUG back to CFLAGS (jl)
put channel topic back before names (db)
another umode hack fix (db)
fixed a broken cast for IRIX (jl)


*** 19990928_1 by lusky
another +o hack fix (db)


*** 19990927_1 by lusky
This patch corrects a case where a normal user can oper themselves (db)
also corrects a possible core due to a bogus H or L line. (neph)


*** 19990911_1 by lusky
another bogus fd check in send.c


*** 19990910_2 by lusky
removed an exit that shouldn't have been there


*** 19990910_1 by lusky
revved patchlevel to b107
user sys/poll.h instead of poll.h


*** 19990909_2 by lusky
corrected error in ChangeLog


*** 19990909_1 by lusky
revved patchlevel to b106
fix return values for client_dopacket and dopacket (th)
m_links check for local client instead of connect


*** 19990908_2 by lusky
revved patchlevel to b105
cleanup m_userhost fix


*** 19990908_1 by lusky
changed 302 reply back to -5 form to fix userhost


*** 19990907_4 by lusky
more dbuf fixes (th)
check in send_message() that the descriptor is valid


*** 19990907_3 by lusky
changed killpath again.  I think I can live with this one.  (jl)


*** 19990907_2 by lusky
bumped patchlevel to b104
fixed a couple of stary index()'s
fix a cast in viconf
fixed broken tools/Makefile.in


*** 19990907_1 by lusky
disallow ':' in fix_key_old() too


*** 19990906_1 by lusky
compromise on supressed killpath and just not send to non opers at all rather than send two to real opers (jl)
more +k/-k fixes


*** 19990904_2 by lusky
more dbuf fixes (th)


*** 19990904_1 by lusky
major fixes to dbuf code (th)
bumped patchlevel to b103


*** 19990902_1 by lusky
added check for '#' in username and hostname of /quote kline

