@@ -19,7 +19,7 @@
  *
  *  (C) 1988 University of Oulu,Computing Center and Jarkko Oikarinen"
  *
- *  $Id: s_conf.c,v 1.174 1999/09/28 00:00:10 lusky Exp $
+ *  $Id: s_conf.c,v 1.175 1999/10/10 01:30:28 lusky Exp $
  */
 #include "s_conf.h"
 #include "channel.h"
@@ -2309,12 +2309,14 @@ static void initconf(FBFILE* file, int use_include)
 
           if( (p = strchr(aconf->host,'@')))
             {
+              char* x;
               aconf->flags |= CONF_FLAGS_DO_IDENTD;
-              *p = '\0';
-	      MyFree(aconf->user);
-	      DupString(aconf->user,aconf->host);
-              p++;
-              strncpy_irc(aconf->host,p, HOSTLEN );      
+              *p++ = '\0';
+              MyFree(aconf->user);
+              DupString(aconf->user, aconf->host);
+              DupString(x, p);
+              MyFree(aconf->host);
+              aconf->host = x;
             }
 
            if( is_address(aconf->host,&ip_host,&ip_mask) )
